--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
+*{
+  background-color: #333;
+  color: white;
+}
+
+.titulo{
+  text-align: center;
+  border-bottom: 1px solid #993399;
+  padding-bottom: 5px;
+}
+
+form{
+  width:450px;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid #993399;
+  padding: 10px;
+}
+.form-group {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1em;
+  margin-top: 1em;
+}
