--- a/src/app/pages/page-ranking/page-ranking.component.html
+++ b/src/app/pages/page-ranking/page-ranking.component.html
@@ -6,7 +6,7 @@
     <ol>
       <li *ngFor="let player of ranking">
         <div class="form-group">
-          <a routerLink="/player">{{player.st_nome}}</a>
+          <a [routerLink]="['/player', player.st_nome]">{{player.st_nome}}</a>
           <label for="playerPoints">{{player.nr_pontuacao}} Pontos</label>
         </div>
       </li>
